--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=base64:8IjO7izzgGyBZsN7MJZn5wF1U4n0NTz9rd2DtQNj1wg=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8080
+API_URL=https://swapi.dev/api/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
